# Technopark_Web1

./: .flake8  .gitignore  pyproject.toml
DZ1/: baze.html
DZ1/ask/: ask.css  ask.html
DZ1/css/: aside.css  header.css
DZ1/index/: index.css  index.html
DZ1/login/: login.css  login.html
DZ1/question/: question.css  question.html
DZ1/settings/: setting.css  setting.html
DZ1/signup/: signup.css  signup.html
DZ1/tag/: tag.css  tag.html
DZ2/project/: settings.py
DZ2/questions/: views.py
DZ2/questions/templates/questions/: ask.html  base.html  question.html
DZ33/: .env  gitignore
DZ33/project/: settings.py  urls.py
DZ33/questions/: admin.py  models.py  urls.py  views.py
DZ33/questions/management/commands/: fill_db.py
DZ33/questions/migrations/: 0003_alter_question_options_userprofile_nickname_and_more.py
DZ33/questions/templates/questions/: base.html  hot_questions.html  index.html  question.html
project/: settings.py  urls.py
questions/: models.py  urls.py  views.py
questions/management/commands/: fill_db.py
questions/migrations/: 0001_initial.py  0002_answer_created_at.py  0004_alter_answer_options_alter_answerlike_options_and_more.py  0005_alter_question_options_alter_answer_user_id_and_more.py  0006_alter_userprofile_avatar.py  0007_alter_question_text.py
questions/static/questions/css/: ask.css  base.css  index.css  login.css  question.css  settings.css  signup.css  tag.css
questions/templates/questions/: ask.html  base.html  login.html  question.html  settings.html  signup.html  tag.html  user.html
(+11 files in other folders)
